<resources>
    <string name="title_activity_main_resume">MainResumeActivity</string>
    <string name="personal_name">Jacob Warner</string>
    <string name="application_label">JW\'s Resume</string>
    <string name="title_my_resume">My Resume</string>
    <string name="app_name">Jacob\'s Resume</string>
    <string name="personal_description">
        "Android Developer\n\n"
        "Looking for a challenging\n"
        "software engineering internship\n"
        "with personal/professional development"
    </string>
    <string name="personal_phone_number">4023508045</string>
    <string name="personal_email">jwarner@huskers.unl.edu</string>

    <!-- Education - College -->
    <string name="college_name">University of Nebraska-Lincoln</string>
    <string name="college_location">Lincoln, Nebraska</string>
    <string name="bachelor_of_science">B.S. in Computer Science and Mathematics</string>
    <string name="minor_study">Minor in Business Management</string>
    <string name="anticipated_graduation">Date of Graduation: May 2019</string>
    <string name="grade_point_average">GPA 3.91</string>
    <string name="honors_program">Honors Program</string>
    <string name="raikes_school">Jeffrey S. Raikes School of Computer Science and Management</string>
    <string name="honors_full_title">
        Honors Program: Jeffrey S. Raikes School of Computer Science and Management
    </string>
    <string name="raikes_school_description">
        "A selective interdisciplinary school integrating innovative business concepts into a traditional computer science curriculum with emphasis on practical and real-world experience taught through group projects."
    </string>


    <!-- College - Honors and Awards -->
    <string name="honors_and_awards_title">Honors and Awards</string>
    <string name="regents_scholarship">University of Nebraska-Lincoln Regents Scholarship</string>
    <string name="honors_program_scholarship">University of Nebraska-Lincoln Honors Program</string>
    <string name="raikes_scholarship">Jeffrey S. Raikes School Scholarship</string>
    <string name="deans_list_award">Dean\'s List, `15 - `16 and `16 - `17</string>
    <string name="spreetail_scholarship">Spreetail Make-a-Dent CSE Scholarship</string>
    <string name="koch_scholarship">Koch Discovery Program Scholarship</string>


    <!-- College - Activities -->
    <string name="activties_title">Activities</string>
    <string name="activities_honor_societies">Alpha Lambda Delta and Phi Eta Signma Honor Socieities</string>
    <string name="activities_kra">Kauffman Residents Association Representative</string>
    <string name="activities_raikes_treasurer">Raikes School Student Advisory Board Treasurer</string>
    <string name="activities_raikes_ambassador">Raikes School Ambassador and Mentor</string>
    <string name="activities_marathon_charity">Make-A-Wish Illinois Charity Marathon Runner</string>
    <string name="activities_ooft">Out of the Darkness Assistant Logistics Coordinator</string>
    <string name="activities_pike_member">Pi Kappa Alpha Fraternity Member</string>
    <string name="activities_pike_internet">Pi Kappa Alpha Internet Chair</string>


    <!-- Education - High School -->
    <string name="high_school_name">Harry A. Burke High School</string>
    <string name="high_school_location">Omaha, Nebraska</string>
    <string name="high_school_graduation_date">Date of Graduation: May 2015</string>
    <string name="high_school_subheading">Valedictorian of 488 students</string>
    <string name="high_school_gpa">GPA 4.0</string>
    <string name="high_school_bullet_one">
        33 ACT, AP Scholar, 2015 Outstanding Senior Award by the Omaha West Rotary Club
    </string>
    <string name="high_school_bullet_two">
        "National Honor Society (President), Senior Senate (Treasurer), Varsity Marching Band (Low Brass Section Leader), Academic Decathlon (Tester)"
    </string>


    <!-- High School - Honors and Awards -->
    <string name="high_school_act">33 ACT, AP Scholar, Weighted GPA 4.90</string>
    <string name="high_school_outstanding_senior">2015 Outstanding Senior Award by the Omaha West Rotary Club</string>


    <!-- High School - Activities -->
    <string name="activities_nhs">National Honor Society (President)</string>
    <string name="activities_senior_senate">Senior Senate (Treasurer)</string>
    <string name="activities_marching_band">Varsity Marching Band (Low Brass Section Leader)</string>
    <string name="activities_academic_decathlon">Academic Decathlon (Tester)</string>


    <!-- ////////// -->
    <!-- Experience -->
    <!-- ////////// -->

    <!-- Hudl Experience (2017) -->
    <string name="hudl_and_location">Hudl, Lincoln, Nebraska</string>
    <string name="hudl_position_2017">Software Engineer - Design Studio</string>
    <string name="hudl_date_2017">August 2017 - Present</string>
    <string name="hudl_2017_bullet_one">Leading the testing efforts of our product design capstone project, while engaging in agile processes and developing real software for sports analytics company, Hudl.</string>

    <!-- Garmin Experience -->
    <string name="garmin_and_location">Garmin International, Olathe, Kansas</string>
    <string name="garmin_position">Android Software Engineer Intern</string>
    <string name="garmin_date">May 2017 - August 2017</string>
    <string name="garmin_bullet_one">Developed a method for users to share photos and enhance their social experience on Garmin’s Android application, Connect, as the feature’s <i>only</i> Android developer, while contributing to other products and features.</string>
    <string name="garmin_bullet_two">Programmed using <b>Java</b> in <b>Android Studio</b>, gaining a vast amount of knowledge on Android and its components.</string>
    <string name="garmin_bullet_three">Worked closely with Garmin Connect API, implementing HTTP service calls using background threads.</string>
    <string name="garmin_bullet_four">Familiarized myself with Glide, a largely used image loader library recommended by Google.</string>
    <string name="garmin_bullet_five">Engaged in agile development methods including iterative development, sprint demos, standup meetings, code reviews, and source control using <b>Git</b> and <b>Gerrit</b>.</string>

    <!-- Google Experience -->
    <string name="google_and_location">Google, Lincoln, Nebraska</string>
    <string name="google_position">Google CodeU Participant</string>
    <string name="google_date">March 2017 - June 2017</string>
    <string name="google_bullet_one">Participated in CodeU, an exclusive virtual development program for <i>high potential</i> undergraduate students.</string>
    <string name="google_bullet_two">Worked remotely with a small group of peers to design and build a software project with regular code reviews and guidance from a Google engineer.</string>
    <string name="google_bullet_three">Implemented data persistence with <b>MongoDB</b>, storing user, conversation, and message data on Mongo Atlas for our desktop <b>Java</b> chat application.</string>
    <string name="google_bullet_four">Exposure to <b>MVC architecture</b> and password encryption.</string>
    <string name="google_bullet_five">Attended exclusive YouTube Live Career Series hosted by Google recruiters and engineers, covering industry and career preparation topics.</string>

    <!-- Hudl Experience (2016) -->
    <string name="hudl_position_2016">Software Quality Analyst Intern</string>
    <string name="hudl_date_2016">May 2016 - August 2016</string>
    <string name="hudl_2016_bullet_one">Worked side-by-side with talented Developers, Designers, and Product Managers every day ensuring customers would use their software by writing automated regression and load tests and manually testing across all platforms.</string>
    <string name="hudl_2016_bullet_two">Wrote <b>Python</b> scripts for automated tests using the Selenium and Appium automation frameworks.</string>
    <string name="hudl_2016_bullet_three">Discovered and audited <i>6 months’ worth</i> of lost public video, leading to more accurate historical analytical business data.</string>
    <string name="hudl_2016_bullet_four">Advised and developed new features from day one with daily team discussions and goal planning.</string>
    <string name="hudl_2016_bullet_five">Communicated and documented software issues using Trello and Atlassian tools such as <b>Jira</b> and <b>Confluence</b>.</string>

    <!-- ////////////// -->
    <!-- End Experience -->
    <!-- ////////////// -->


    <!-- Projects -->
    <string name="current_projects_title">Current Project(s)</string>
    <string name="past_projects_title">Past Project(s)</string>
    <string name="my_resume_app_title">My Resume App</string>
    <string name="resume_app_description">First Android project meant to familiarize myself with <i>Google Material Design</i>.</string>
    <string name="resume_app_github_link">Source code can be found at https://github.com/JacobWarner/ResumeApp</string>
    <string name="codeu_project_2017_title">CodeU Project 2017</string>
    <string name="codeu_project_description">As part of the Google CodeU program, I was given the framework of a desktop chat application in <b>Java</b> to develop my coding and software engineering skills. My job was to implement data persistence, which I chose to do through <b>MongoDB</b>.</string>
    <string name="codeu_github_link">Source code can be found at https://github.com/JacobWarner/codeu_project_2017</string>


    <!-- Menu Actions -->
    <string name="action_save_as_pdf">Save as PDF</string>
    <string name="action_legal">Legal</string>
    <string name="action_call">Call</string>
    <string name="action_email">Email</string>
    <string name="pdf_download_string">https://www.dropbox.com/s/h4grnga4kg4a482/Resume.pdf?raw=1</string>
    <string name="pdf_file_title">Jacob Warner\'s Resume</string>
    <string name="pdf_file_name">jacob_warner_resume.pdf</string>


    <!-- Legal -->
    <string name="circle_imageview_title">CircleImageView</string>
    <string name="floating_toolbar_title">FloatingToolbar</string>
    <string name="circular_imageview_legal_info">
        Copyright 2014 - 2017 Henning Dodenhof\n\nLicensed under the Apache License, Version 2.0 (the \"License\");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n
        \t http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an \"AS IS\" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="floating_toolbar_legal_info">
        Copyright 2016 Rúben Sousa\n\nLicensed under the Apache License, Version 2.0 (the \"License\");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n
        \t http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an \"AS IS\" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="done_lbl">Done</string>

</resources>
