<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bullet_point_divider_spacing"
        android:text="@string/honors_and_awards_title"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/black_contrast_87"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/regents_scholarship"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/honors_program_scholarship"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/raikes_scholarship"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/deans_list_award"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/spreetail_scholarship"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/koch_scholarship"/>

</LinearLayout>