<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jacob.warner.myresume.MainResumeActivity">

    <item
        android:id="@+id/action_save_as_pdf"
        android:title="@string/action_save_as_pdf"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_legal"
        android:title="@string/action_legal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_call"
        android:title="@string/action_call"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email"
        android:title="@string/action_email"
        android:visible="false"
        app:showAsAction="never" />
</menu>
