<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bullet_point_divider_spacing"
        android:text="@string/activties_title"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/black_contrast_87"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/activities_nhs"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/activities_senior_senate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/activities_marching_band"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_separator"
        android:textSize="@dimen/regular_body_text"
        android:text="@string/activities_academic_decathlon"/>

</LinearLayout>