<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="jacob.warner.myresume.MainResumeActivity$PlaceholderFragment">

        <ImageView
            android:id="@+id/unl_icon"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/unl_icon"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/unl_icon"
            android:layout_alignTop="@id/unl_icon"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/college_name"
                android:textStyle="bold"
                android:textSize="@dimen/regular_body_text"
                android:textColor="@color/black_contrast_87"/>

            <TextView
                android:id="@+id/college_bachelors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bachelor_of_science"
                android:textColor="@color/black_contrast_87"
                android:textSize="@dimen/subheading_text"/>

            <TextView
                android:id="@+id/college_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minor_study"
                android:textSize="@dimen/caption_text"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/black_contrast_87"
        android:text="@string/honors_full_title"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="jacob.warner.myresume.MainResumeActivity$PlaceholderFragment">

        <TextView
            android:id="@+id/raikes_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/regular_body_text"
            android:text="@string/raikes_school_description"/>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/raikes_description"
            android:layout_alignBottom="@id/raikes_description"
            android:background="@color/colorPrimaryLight"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/caption_text"
            android:text="@string/anticipated_graduation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/caption_text"
            android:text="@string/grade_point_average"/>

    </LinearLayout>

</LinearLayout>