<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jacob.warner.myresume.MainResumeActivity$PlaceholderFragment">

    <ImageView
        android:id="@+id/garmin_icon"
        android:layout_width="@dimen/default_image_icon_width"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/garmin_connect_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garmin_and_location"
            android:textColor="@color/black_contrast_87"
            android:textSize="@dimen/regular_body_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garmin_position"
            android:textColor="@color/black_contrast_87"
            android:textSize="@dimen/subheading_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garmin_date"
            android:textColor="@color/black_contrast_87"
            android:textSize="@dimen/regular_body_text" />

    </LinearLayout>

</LinearLayout>