<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="jacob.warner.myresume.MainResumeActivity$PlaceholderFragment">

        <ImageView
            android:id="@+id/unl_icon"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/burke_high"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_school_name"
                android:textStyle="bold"
                android:textSize="@dimen/regular_body_text"
                android:textColor="@color/black_contrast_87"/>

            <TextView
                android:id="@+id/college_bachelors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_school_location"
                android:textColor="@color/black_contrast_87"
                android:textSize="@dimen/subheading_text"/>

            <TextView
                android:id="@+id/college_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_school_graduation_date"
                android:textSize="@dimen/caption_text"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subheading_text"
        android:textColor="@color/black_contrast_87"
        android:text="@string/high_school_subheading"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/bullet_point_divider_spacing"
        tools:context="jacob.warner.myresume.MainResumeActivity$PlaceholderFragment">

        <TextView
            android:id="@+id/high_school_bullet_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/regular_body_text"
            android:text="@string/high_school_bullet_one"/>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/high_school_bullet_one"
            android:layout_alignBottom="@id/high_school_bullet_one"
            android:background="@color/colorPrimaryLight"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/bullet_point_divider_spacing"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="jacob.warner.myresume.MainResumeActivity$PlaceholderFragment">

        <TextView
            android:id="@+id/high_school_bullet_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="@dimen/regular_body_text"
            android:text="@string/high_school_bullet_two"/>

        <ImageView
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/high_school_bullet_two"
            android:layout_alignBottom="@id/high_school_bullet_two"
            android:background="@color/colorPrimaryLight"/>

    </RelativeLayout>

</LinearLayout>